Fix for swapoff path. README updated. Ansible inventory fixed with proper hostnames

--- a/inventory/vdmitriev-sbx.local/hosts.ini
+++ b/inventory/vdmitriev-sbx.local/hosts.ini
@@ -1,27 +1,26 @@
 [all]
-node1 	 ansible_host=172.22.4.217 ip=172.22.4.217
-node2 	 ansible_host=172.22.4.58 ip=172.22.4.58
-node3 	 ansible_host=172.22.4.59 ip=172.22.4.59
-node4 	 ansible_host=172.22.4.60 ip=172.22.4.60
+inw-vm41.rfiserve.net 	 ansible_host=172.22.4.217 ip=172.22.4.217
+inw-vm43.rfiserve.net 	 ansible_host=172.22.4.58 ip=172.22.4.58
+inw-vm52.rfiserve.net 	 ansible_host=172.22.4.59 ip=172.22.4.59
+inw-vm60.rfiserve.net 	 ansible_host=172.22.4.60 ip=172.22.4.60
 
 [all:vars]
-remote_tmp=/tmp
 ansible_user=vdmitriev
 
 [kube-master]
-node1 	 
-node2 	 
+inw-vm41.rfiserve.net 	 
+inw-vm43.rfiserve.net 	 
 
 [etcd]
-node1 	 
-node2 	 
-node3 	 
+inw-vm41.rfiserve.net 	 
+inw-vm43.rfiserve.net 	 
+inw-vm52.rfiserve.net 	 
 
 [kube-node]
-node1 	 
-node2 	 
-node3 	 
-node4 	 
+inw-vm41.rfiserve.net 	 
+inw-vm43.rfiserve.net 	 
+inw-vm52.rfiserve.net 	 
+inw-vm60.rfiserve.net 	 
 
 [k8s-cluster:children]
 kube-master 	 
@@ -30,7 +29,7 @@ kube-node
 [calico-rr]
 
 [vault]
-node1 	 
-node2 	 
-node3 	 
+inw-vm41.rfiserve.net 	 
+inw-vm43.rfiserve.net 	 
+inw-vm52.rfiserve.net 	 
 
