--- a/roles/kubernetes/preinstall/tasks/0010-swapoff.yml
+++ b/roles/kubernetes/preinstall/tasks/0010-swapoff.yml
@@ -6,5 +6,7 @@
     state: absent
 
 - name: Disable swap
-  command: /usr/sbin/swapoff -a
+  command: swapoff -a
+  environment:
+    PATH: '/sbin:/usr/sbin:{{ ansible_env.PATH }}'
   when: ansible_swaptotal_mb > 0
