Really minor changes

--- a/inventory/vdmitriev-sbx.local/custom_scripts/k8s/test-deployment.yaml
+++ b/inventory/vdmitriev-sbx.local/custom_scripts/k8s/test-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: test-container
-        image: busybox
+        image: alpine
         command: ['sh']
         stdin: true
         tty: true
