Wrappers for some cluster ops added. New node added. Readme updated

--- a/inventory/vdmitriev-sbx.local/hosts.ini
+++ b/inventory/vdmitriev-sbx.local/hosts.ini
@@ -1,6 +1,7 @@
 [all]
 inw-vm41.rfiserve.net 	 ansible_host=172.22.4.217 ip=172.22.4.217
 inw-vm43.rfiserve.net 	 ansible_host=172.22.4.58 ip=172.22.4.58
+inw-vm49.rfiserve.net    ansible_host=172.22.4.50 ip=172.22.4.50
 inw-vm52.rfiserve.net 	 ansible_host=172.22.4.59 ip=172.22.4.59
 inw-vm60.rfiserve.net 	 ansible_host=172.22.4.60 ip=172.22.4.60
 
@@ -8,26 +9,19 @@ inw-vm60.rfiserve.net 	 ansible_host=172.22.4.60 ip=172.22.4.60
 ansible_user=vdmitriev
 
 [kube-master]
-inw-vm41.rfiserve.net 	 
-inw-vm43.rfiserve.net 	 
+inw-vm41.rfiserve.net
+inw-vm43.rfiserve.net
+inw-vm49.rfiserve.net
 
 [etcd]
-inw-vm41.rfiserve.net 	 
-inw-vm43.rfiserve.net 	 
-inw-vm52.rfiserve.net 	 
+inw-vm41.rfiserve.net
+inw-vm43.rfiserve.net
+inw-vm49.rfiserve.net
 
 [kube-node]
-inw-vm52.rfiserve.net 	 
-inw-vm60.rfiserve.net 	 
+inw-vm52.rfiserve.net
+inw-vm60.rfiserve.net
 
 [k8s-cluster:children]
-kube-master 	 
-kube-node 	 
-
-[calico-rr]
-
-[vault]
-inw-vm41.rfiserve.net 	 
-inw-vm43.rfiserve.net 	 
-inw-vm52.rfiserve.net 	 
-
+kube-master
+kube-node
