--- a/inventory/vdmitriev-sbx.local/custom_scripts/prepare_host.yml
+++ b/inventory/vdmitriev-sbx.local/custom_scripts/prepare_host.yml
@@ -1,8 +1,10 @@
 # Ansible playbook with some dirty hacks needed to make oVirt VM kubespray friendly
 #
 # Should be executed before kubespray cluster.yml
+
+# TODO: transfer it to the separate Ansible role
 ---
-- hosts: all
+- hosts: k8s-cluster:etcd
   vars:
     sysctl_conf_path: /etc/sysctl.conf
     ip_route: 10.0.0.0/8
@@ -27,3 +29,10 @@
         then
           /sbin/ip route del "{{ ip_route }}"
         fi
+
+- hosts: k8s-cluster
+  tasks:
+    - name: Install glusterfs mount utils
+      yum:
+        name: glusterfs-fuse
+        state: present
