--- a/inventory/vdmitriev-sbx.local/group_vars/k8s-cluster/k8s-cluster.yml
+++ b/inventory/vdmitriev-sbx.local/group_vars/k8s-cluster/k8s-cluster.yml
@@ -112,6 +112,8 @@ cluster_name: vdmitriev-sbx.local
 ndots: 2
 # Can be dnsmasq_kubedns, kubedns, coredns, coredns_dual, manual or none
 dns_mode: coredns
+# As far as kubedns is disabled explicitly set empty value for its k8s manifests var
+kubedns_manifests: {}
 # Set manual server if using a custom cluster DNS server
 #manual_dns_server: 10.x.x.x
 
