--- a/contrib/network-storage/heketi/roles/tear-down-disks/tasks/main.yml
+++ b/contrib/network-storage/heketi/roles/tear-down-disks/tasks/main.yml
@@ -36,11 +36,11 @@
   yum:
       name: "lvm2"
       state: "absent"
-  when: "ansible_os_family == 'RedHat'"
+  when: ansible_os_family == 'RedHat' and cleanup_lvm_utils
 
 - name: "Remove lvm utils (Debian)"
   become: true
   apt:
       name: "lvm2"
       state: "absent"
-  when: "ansible_os_family == 'Debian'"
+  when: ansible_os_family == 'Debian' and cleanup_lvm_utils
