heketi installation moved to cluster worker nodes

--- a/inventory/vdmitriev-sbx.local/custom_scripts/prepare_host.yml
+++ b/inventory/vdmitriev-sbx.local/custom_scripts/prepare_host.yml
@@ -30,7 +30,7 @@
           /sbin/ip route del "{{ ip_route }}"
         fi
 
-- hosts: k8s-cluster
+- hosts: kube-node
   tasks:
     - name: Install glusterfs mount utils
       yum:
