--- a/inventory/vdmitriev-sbx.local/hosts.yml
+++ b/inventory/vdmitriev-sbx.local/hosts.yml
@@ -10,7 +10,7 @@ all:
             inw-vm43.rfiserve.net:
             inw-vm49.rfiserve.net:
         kube-node:
-          hosts:
+          hosts: &kube-nodes
             inw-vm52.rfiserve.net:
             inw-vm60.rfiserve.net:
     etcd:
@@ -20,4 +20,4 @@ all:
       vars:
         disk_volume_device_1: "/dev/vdb"
       hosts:
-        <<: *kube-masters
+        <<: *kube-nodes
