--- a/inventory/vdmitriev-sbx.local/hosts.yml
+++ b/inventory/vdmitriev-sbx.local/hosts.yml
@@ -1,6 +1,9 @@
 all:
   vars:
     ansible_user: vdmitriev
+    # TODO: cleanup or move to the group_vars/all depending on the heketi PoC
+    heketi_admin_key: "adm1n-k3y"
+    heketi_user_key: "us3r-k3y"
   children:
     k8s-cluster:
       children:
