worker node inw-vm31.rfiserve.net added to the cluster

--- a/inventory/vdmitriev-sbx.local/hosts.yml
+++ b/inventory/vdmitriev-sbx.local/hosts.yml
@@ -14,6 +14,7 @@ all:
             inw-vm49.rfiserve.net:
         kube-node:
           hosts: &kube-nodes
+            inw-vm31.rfiserve.net:
             inw-vm52.rfiserve.net:
             inw-vm60.rfiserve.net:
     etcd:
