--- a/inventory/vdmitriev-sbx.local/custom_scripts/k8s/helm_values/jenkins_sbx/values.yaml
+++ b/inventory/vdmitriev-sbx.local/custom_scripts/k8s/helm_values/jenkins_sbx/values.yaml
@@ -144,6 +144,7 @@ Master:
     # because blue balls are evil
     - greenballs:1.15
     - timestamper:1.9
+    - prometheus:1.625.3
 
   # Enable to always override the installed plugins with the values of 'Master.InstallPlugins' on upgrade or redeployment.
   # OverwritePlugins: true
