Prometheus: change metrics retention to 3d and drop jenkins_node_jenkins_sbx_slave metrics

--- a/inventory/vdmitriev-sbx.local/custom_scripts/k8s/operators/prometheus/prometheus-sre.yml
+++ b/inventory/vdmitriev-sbx.local/custom_scripts/k8s/operators/prometheus/prometheus-sre.yml
@@ -15,6 +15,7 @@ spec:
   nodeSelector:
     beta.kubernetes.io/os: linux
   replicas: 1
+  retention: 3d
   resources:
     requests:
       memory: 400Mi
