--- a/inventory/vdmitriev-sbx.local/custom_scripts/k8s/operators/prometheus/servicemonitor-jenkins-sbx.yml
+++ b/inventory/vdmitriev-sbx.local/custom_scripts/k8s/operators/prometheus/servicemonitor-jenkins-sbx.yml
@@ -16,3 +16,8 @@ spec:
   endpoints:
   - path: /prometheus
     port: http
+    metricRelabelings:
+    - action: drop
+      regex: jenkins_node_jenkins_sbx_slave_.*_builds.*
+      sourceLabels:
+      - __name__
