--- a/inventory/vdmitriev-sbx.local/custom_scripts/k8s/operators/prometheus/cluster-monitoring-node-exporter.yml
+++ b/inventory/vdmitriev-sbx.local/custom_scripts/k8s/operators/prometheus/cluster-monitoring-node-exporter.yml
@@ -58,7 +58,7 @@ spec:
         - --path.sysfs=/host/sys
         - --path.rootfs=/host/root
         - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+)($|/)
-        - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|cgroup|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|mqueue|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|sysfs|tracefs)$
+        - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|cgroup|configfs|debugfs|devpts|devtmpfs|hugetlbfs|mqueue|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|sysfs|tracefs)$
         image: quay.io/prometheus/node-exporter:v0.17.0
         name: node-exporter
         resources:
