Prometheus: change alertmanager Service type to ClusterIP

--- a/inventory/vdmitriev-sbx.local/custom_scripts/k8s/operators/prometheus/alertmanager-main.yaml
+++ b/inventory/vdmitriev-sbx.local/custom_scripts/k8s/operators/prometheus/alertmanager-main.yaml
@@ -40,7 +40,7 @@ metadata:
   name: alertmanager-main
   namespace: monitoring
 spec:
-  type: LoadBalancer
+  # type: LoadBalancer
   ports:
   - name: web
     port: 9093
