GC-17725: Evaluate existing K8S integrations with on-prem DNS servers

--- a/inventory/vdmitriev-sbx.local/custom_scripts/k8s/helm_values/haproxy-ingress/values.yaml
+++ b/inventory/vdmitriev-sbx.local/custom_scripts/k8s/helm_values/haproxy-ingress/values.yaml
@@ -25,6 +25,10 @@ controller:
   nodeSelector:
     node-role.kubernetes.io/master: ""
 
+  service:
+    annotations:
+      external-dns.alpha.kubernetes.io/hostname: ingress-controller.k8s-sbx.rfiserve.net
+
   stats:
     enabled: true  
 
