GC-17432: Extract all external Kubespray customisations into separate Ansible role

--- a/inventory/vdmitriev-sbx.local/custom_scripts/prepare_host.yml
+++ b/inventory/vdmitriev-sbx.local/custom_scripts/prepare_host.yml
@@ -1,44 +1,4 @@
-# Ansible playbook with some dirty hacks needed to make VMs kubespray friendly
-#
-# Should be executed before kubespray cluster.yml
-
-# TODO: transfer it to the separate Ansible role
 ---
-- hosts: k8s-cluster:etcd
-  vars:
-    sysctl_conf_path: /etc/sysctl.conf
-    ip_route: 10.0.0.0/8
-    daemontools_services:
-      - puppet4
-      - logstash-shipper
-      - graphite-proxy
-  tasks:
-    - name: Disable daemontools controlled service to free up resources
-      svc:
-        name: "{{ item }}"
-        state: stopped
-        downed: yes
-      loop: "{{ daemontools_services }}"
-    - name: "Remove ipv6 records from the {{ sysctl_conf_path }}"
-      replace:
-        path: "{{ sysctl_conf_path }}"
-        regexp: '^net\.ipv6.*'
-    - name: disable conflicting route
-      replace:
-        path: /etc/sysconfig/network-scripts/route-eth0
-        regexp: '^(10\.0\.0\.0\/8 via 172\.22\.4\.249)$'
-        replace: '#\1'
-      notify:
-        - restart network
-  handlers:
-    - name: restart network
-      service:
-        name: network
-        state: restarted
-
-- hosts: kube-node
-  tasks:
-    - name: Install glusterfs mount utils
-      yum:
-        name: glusterfs-fuse
-        state: present
+- hosts: k8s-cluster:etcd:heketi-node
+  roles:
+     - ansible-role-kubespray-bootstrap
