GC-17863: Deploy K8S cluster to test standalone GlusterFS integration

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ contrib/terraform/aws/credentials.tfvars
 vagrant/
 
 # Ansible inventory
-inventory/*
+#inventory/*
 !inventory/local
 !inventory/sample
 inventory/*/artifacts/
